--- a/css/style.css
+++ b/css/style.css
@@ -1,174 +1,318 @@
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+
 body {
-  color: #fff;
-  font-family: "Roboto", sans-serif;
-  background-color: #14131a;
-}
-.container {
-  max-width: 1140px;
-  margin: auto;
-}
-.header {
-  padding-top: 40px;
-  display: flex;
-  align-items: center;
-  margin-bottom: 80px;
-}
-.logo-link {
-  display: inline-block;
-  margin-right: 50px;
-}
-.nav-menu {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  display: flex;
-}
-
-.nav-menu-item {
-  margin-right: 30px;
-}
-
-.nav-menu-link {
-  text-decoration: none;
-  color: rgba(255, 255, 255, 0.5);
-}
-.film-date {
-  display: block;
-  font-size: 24px;
-  line-height: 28px;
-  color: rgba(255, 255, 255, 0.8);
-  margin-bottom: 38px;
-}
-
-.film-description {
-  margin-top: 40px;
+  font-family: "Fira Sans", sans-serif;
   font-size: 16px;
-  line-height: 140%;
-  color: rgba(255, 255, 255, 0.8);
-  max-width: 423px;
+  color: #111238;
+  margin: 0;
 }
-.button {
-  padding: 15px 30px;
-  border: none;
-  border-radius: 5px;
+
+.header {
+  background: #f2f3f6;
+}
+.img {
+  min-width: 100%;
+}
+.card-icon {
+  width: 100%;
+}
+
+.menu {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.menu-item:not(:last-child) {
+  margin-right: 20px;
+}
+
+.menu-link {
+  color: #111238;
   text-decoration: none;
-  cursor: pointer;
 }
-.button-text,
-.button-icon {
+
+.button {
+  text-decoration: none;
   display: inline-block;
+  border: none;
+  font-size: 16px;
+}
+.button-icon {
   vertical-align: middle;
 }
 .button-text {
-  font-size: 14px;
-  line-height: 16px;
+  vertical-align: middle;
   margin-left: 10px;
 }
-.button-primary {
-  color: #8d0019;
-  background-color: #fff;
-}
 .button-link {
-  color: #fff;
-}
-.button-group {
-  margin-top: 70px;
-}
-.venom {
-  position: absolute;
-  top: 0;
-  right: 0;
-}
-.blood {
-  background: url("../img/blood.png") no-repeat top right,
-    #14131a url("../img/background.jpg") no-repeat center center / 100%;
-}
-.primary-bg {
-  background: #14131a url("../img/background.jpg") no-repeat center center /
-    100%;
-}
-.content {
-  display: flex;
-}
-.col {
-  flex-basis: 50%;
-}
-.content-title {
-  font-weight: bold;
-  font-size: 36px;
-  line-height: 42px;
-  color: rgba(255, 255, 255, 0.8);
-  margin-bottom: 20px;
-}
-.content-text {
-  font-size: 16px;
-  line-height: 140%;
-  color: rgba(255, 255, 255, 0.8);
-  max-width: 423px;
-  margin-bottom: 30px;
-}
-.content-subtitle {
-  font-size: 16px;
-  line-height: 140%;
-  color: rgba(255, 255, 255, 0.8);
-  margin-bottom: 15px;
-  margin-top: 0px;
-}
-
-.content .list {
-  list-style-type: none;
-  padding: 0;
-}
-.column-2 {
-  -webkit-column-count: 2;
-  -moz-column-count: 2;
-  column-count: 2;
-  -webkit-column-gap: 20px;
-  -moz-column-gap: 20px;
-  column-gap: 20px;
-  max-width: 350px;
-}
-.list-item {
-  line-height: 1.5;
-}
-
-.content .trailer {
-  width: 356px;
-  height: 205px;
-  background: url("../img/trailer-cover.png") no-repeat center / contain;
-  border-radius: 5px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 33px;
-}
-
-.trailer .play {
-  width: 45px;
-  height: 45px;
-  border-radius: 50%;
-  border: none;
-  cursor: pointer;
-}
-.trailer .play-icon {
-  transform: translate(1px, 2px);
-}
-.poster-wrapper {
-  display: flex;
-  align-items: start;
-}
-.poster {
-  width: 362px;
-  border-radius: 5px;
+  color: #111238;
+  padding: 10px;
   margin-right: 30px;
 }
-.poster-wrapper .list {
+
+.button-primary {
+  background: #1a75e8;
+  border-radius: 5px;
+  padding: 15px 30px;
+  color: white;
+}
+
+.hero-title {
+  font-size: 44px;
+  line-height: 53px;
+  margin-bottom: 15px;
+  margin-top: 43px;
+}
+
+.hero-text {
+  font-size: 18px;
+  line-height: 140%;
+  margin-bottom: 30px;
+}
+.input-group {
+  background: #ffffff;
+  border: 1px solid rgba(209, 209, 209, 0.1);
+  box-shadow: 0px 4px 25px rgba(15, 17, 56, 0.1);
+  border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 25px;
+}
+.input {
+  background-color: #fff;
+  border: none;
+  flex-grow: 1;
+  font-size: 16px;
+  line-height: 19px;
+  padding-left: 15px;
+}
+.input:focus {
+  outline: 1px solid blue;
+}
+
+.tags-group {
+  color: #b2b2b2;
+  padding-left: 15px;
+  font-size: 14px;
+  line-height: 17px;
+}
+
+.tag {
+  color: #b2b2b2;
+  text-decoration: none;
+  padding: 5px 10px;
+  margin-left: 10px;
+  border: 1px solid #b2b2b2;
+  border-radius: 5px;
+}
+.section {
+  padding-top: 70px;
+  padding-bottom: 80px;
+}
+
+.section-title {
+  margin-bottom: 40px;
+}
+.card-icon {
+  fill: #111238;
+  margin-bottom: 15px;
+  transition: fill 0.2s;
+}
+
+.card:hover {
+  background-color: #1a75e8;
+  color: white;
+}
+.card:hover .card-icon {
+  fill: #fff;
+}
+.card {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  text-decoration: none;
+  color: #111238;
+  background: #f2f3f6;
+  border-radius: 10px;
+  padding: 35px;
+  transition: background 0.2s, color 0.2s;
+}
+
+.offer {
+  border: 1px solid #c5c9d5;
+  border-radius: 10px;
+  padding: 30px;
+  margin-bottom: 20px;
+}
+
+.offer-image {
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  border: 1px solid #f2f3f6;
+  background: #fff url("../img/logo-company.png") no-repeat center / contain;
+}
+.offer-title {
+  margin-left: 20px;
+}
+.offer-heading {
+  font-size: 16px;
+  line-height: 19px;
+  margin-bottom: 10px;
+}
+.offer-place {
+  font-size: 14px;
+  line-height: 17px;
+}
+.offer-salary {
+  margin-left: 46px;
+  margin-right: 62px;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 19px;
+  color: #fff;
+  background: #1a75e8;
+  border-radius: 5px;
+  padding: 10px 25px;
+}
+.more {
+  font-size: 14px;
+  line-height: 17px;
+  color: #1a75e8;
+  text-decoration: none;
+  margin-left: auto;
+  margin-right: 25px;
+}
+.subscribe {
+  background: #f2f3f6;
+}
+.subscribe-form {
+  max-width: 460px;
+  margin: auto;
+  text-align: center;
+}
+.subscribe-title {
+  font-size: 36px;
+  line-height: 43px;
+  margin-bottom: 20px;
+}
+.subscribe-subtitle {
+  font-size: 18px;
+  line-height: 140%;
+  margin-bottom: 40px;
+}
+.footer {
+  padding-top: 70px;
+  padding-bottom: 100px;
+}
+.footer-description,
+.footer-copyright {
+  font-size: 12px;
+  line-height: 140%;
+  color: #b2b2b2;
+}
+
+.footer-title {
   margin: 0;
-  margin-bottom: 20px;
+  margin-bottom: 15px;
+  font-size: 16px;
+  line-height: 19px;
+  color: #111238;
 }
-.poster-wrapper .content-subtitle {
-  margin-bottom: 5px;
+
+.footer-list {
+  padding: 0;
+  margin: 0;
+  list-style: none;
 }
-.poster-wrapper .content-text {
-  margin-bottom: 20px;
+.footer-list-link {
+  display: block;
+  margin-bottom: 10px;
+  font-size: 16px;
+  line-height: 19px;
+  color: #111238;
+  text-decoration: none;
+}
+.hero-image {
+  max-width: 100%;
+}
+
+@media (max-width: 1200px) {
+  .offer-salary {
+    margin-left: 30px;
+    margin-right: 30px;
+  }
+  .more {
+    margin-right: 0;
+  }
+}
+
+@media (max-width: 992px) {
+  .more {
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .offer-title {
+    text-align: center;
+    margin-left: 0;
+  }
+  .tag:first-of-type {
+    margin-left: 0;
+  }
+  .navbar {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    transform: translateX(-100%);
+    transition: transform 0.3s;
+  }
+  .is-open {
+    transform: translateX(0);
+  }
+  .menu-item:not(:last-child) {
+    margin-right: 0;
+  }
+  .button-link {
+    margin-right: 0;
+  }
+  .close-button {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    text-decoration: none;
+    font-size: 24px;
+    text-align: right;
+    padding: 20px;
+  }
+}
+@media (max-width: 576px) {
+  .footer {
+    text-align: center;
+  }
+  .card {
+    max-width: 250px;
+    margin: auto;
+  }
+  .section-title {
+    text-align: center;
+  }
+  .hero-title {
+    font-size: 24px;
+    line-height: 1.4;
+  }
+  .hero {
+    text-align: center;
+  }
+  .tags-label {
+    display: block;
+    margin-bottom: 20px;
+    text-align: center;
+  }
 }
