--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,20 @@ body {
   font-family: "Roboto", sans-serif;
   background-color: #14131a;
 }
+.img {
+  max-width: 100%;
+}
 .container {
-  max-width: 1140px;
+  /* max-width: 1140px; */
   margin: auto;
+  width: 90%;
+}
+.venom {
+  position: absolute;
+  top: 0;
+  right: 0;
+  max-width: 720px;
+  width: 50%;
 }
 .header {
   padding-top: 40px;
@@ -37,11 +48,11 @@ body {
   font-size: 24px;
   line-height: 28px;
   color: rgba(255, 255, 255, 0.8);
-  margin-bottom: 38px;
+  margin-bottom: 2%;
 }
 
 .film-description {
-  margin-top: 40px;
+  margin-top: 3%;
   font-size: 16px;
   line-height: 140%;
   color: rgba(255, 255, 255, 0.8);
@@ -72,15 +83,11 @@ body {
   color: #fff;
 }
 .button-group {
-  margin-top: 70px;
+  margin-top: 5%;
 }
-.venom {
-  position: absolute;
-  top: 0;
-  right: 0;
-}
+
 .blood {
-  background: url("../img/blood.png") no-repeat top right,
+  background: url("../img/blood.png") no-repeat top right / 80%,
     #14131a url("../img/background.jpg") no-repeat center center / 100%;
 }
 .primary-bg {
@@ -171,4 +178,130 @@ body {
 }
 .poster-wrapper .content-text {
   margin-bottom: 20px;
+}
+.film-logo {
+  width: 70%;
+}
+.menu-button {
+  display: none;
+}
+.menu-close {
+  display: none;
+}
+@media (max-width: 768px) {
+  .blood {
+    background: #14131a;
+  }
+  .venom {
+    top: 10%;
+  }
+}
+@media (max-width: 576px) {
+  .venom {
+    top: 20%;
+    width: 30%;
+  }
+  .menu-close {
+    position: fixed;
+    opacity: 0;
+    right: 25px;
+    top: 65px;
+    display: flex;
+    align-items: center;
+    z-index: 10;
+    border: none;
+    background-color: #fff;
+    cursor: pointer;
+    transform: translateX(300%);
+    transition: transform 0.2s;
+    transition-delay: 0.4s;
+  }
+  .menu-close-text {
+    margin-right: 10px;
+  }
+  .nav-menu {
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 9;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    transform: translateX(100%);
+    transition: transform 0.2s;
+  }
+  .is-active {
+    transform: translateX(0);
+    opacity: 1;
+  }
+  .nav-menu-link {
+    color: #14131a;
+  }
+  .nav-menu-item {
+    margin-bottom: 2%;
+    margin-top: 2%;
+    margin-right: 0;
+  }
+  .nav {
+    margin-left: auto;
+  }
+  .menu-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    border: none;
+    background: #14131a;
+    cursor: pointer;
+    color: #fff;
+  }
+  .menu-button-text {
+    margin-right: 10px;
+  }
+  .button-group {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .film-text {
+    text-align: center;
+  }
+  .poster-wrapper {
+    flex-direction: column;
+  }
+  .poster {
+    margin-bottom: 4%;
+    width: 100%;
+  }
+  .content .trailer {
+    max-width: 356px;
+    width: 100%;
+  }
+  .poster-wrapper {
+    margin-right: 0;
+    width: 100%;
+    max-width: 356px;
+  }
+  .column-2 {
+    column-count: 1;
+  }
+}
+@media (max-width: 1024px) {
+  .content {
+    flex-direction: column;
+  }
+  .col {
+    margin-bottom: 5%;
+  }
+  .header {
+    margin-bottom: 4%;
+  }
+  .film {
+    margin-top: 20%;
+  }
 }
